--- a/src/components/Header/style.scss
+++ b/src/components/Header/style.scss
@@ -10,6 +10,16 @@ header {
   z-index: 50;
   transition: all 0.2s ease-in-out;
 
+  // @media (min-width: $xs) {
+  //   &:not(.fixed) {
+  //     background: linear-gradient(
+  //       to bottom,
+  //       rgba(255, 255, 255, 1) 0%,
+  //       rgba(255, 255, 255, 0) 100%
+  //     );
+  //   }
+  // }
+
   @media (max-width: $xs) {
     background-color: $thirdColor;
     padding: 5px 0;
@@ -27,6 +37,9 @@ header {
   &.fixed {
     background-color: $thirdColor;
     padding: 5px 0;
+    -webkit-box-shadow: 0px 5px 5px 0px rgba(0, 0, 0, 0.2);
+    -moz-box-shadow: 0px 5px 5px 0px rgba(0, 0, 0, 0.2);
+    box-shadow: 0px 5px 5px 0px rgba(0, 0, 0, 0.2);
 
     .logo {
       width: 90px;
