Correções de diretorio e listagem de filmes

--- a/src/components/SearchBar/style.scss
+++ b/src/components/SearchBar/style.scss
@@ -1,4 +1,4 @@
-@import "./../../style/variables.scss";
+@import "./../../styles/variables.scss";
 .form-search {
   width: 400px;
   max-width: 100%;
