--- a/src/components/Header/style.scss
+++ b/src/components/Header/style.scss
@@ -1,5 +1,5 @@
-@import "./../../style/variables.scss";
-@import "./../../style/helpers.scss";
+@import "./../../styles/variables.scss";
+@import "./../../styles/helpers.scss";
 
 header {
   padding: 20px 0;
